# Machine-Learning-with-TF-diamonds

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg
ml_diamonds/: diamond_categorical_binary_classification.py  diamond_categorical_binary_classification_ktuned.py  diamond_categorical_linreg.py  diamond_categorical_linreg_ktuned.py  diamond_categorical_linreg_ktuner_included.py  diamond_ktuner.py  diamond_numeric_linreg.py  diamond_two_by_two_linreg.py  diamond_two_by_two_plot.py
ml_diamonds/common/: get_dir.py  plot_metrics_curve.py
ml_diamonds/ktuner/diamond_categorical_binary_classification_k_tuner/: oracle.json
ml_diamonds/ktuner/diamond_categorical_binary_classification_k_tuner/trial_0000/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ml_diamonds/ktuner/diamond_categorical_binary_classification_k_tuner/trial_0001/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ml_diamonds/ktuner/diamond_categorical_binary_classification_k_tuner/trial_0002/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ml_diamonds/ktuner/diamond_categorical_binary_classification_k_tuner/trial_0003/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
ml_diamonds/ktuner/diamond_categorical_binary_classification_k_tuner/trial_0004/: checkpoint.index  (+2 more)
ml_diamonds/ktuner/diamond_categorical_linreg_k_tuner/: oracle.json
ml_diamonds/savedmodels/categorical_binary_classification_k_tuner/: keras_metadata.pb  saved_model.pb
ml_diamonds/savedmodels/categorical_linreg_k_tuner/: keras_metadata.pb  saved_model.pb
(+145 files in other folders)
