[metadata]
name = Machine-Learning-with-TF-diamonds
version = 0.0.1
description = A personal project for learning TensorFlow ML concepts using the tfds diamonds dataset
long_description = file: README.md
author = solomonab2
author_email = solomonab2@vcu.edu
classifiers=
   Topic :: Scientific/Engineering :: Artificial Intelligence
   Development Status :: 3 - Alpha

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   os
   pandas
   numpy
   tensorflow
   tensorflow_datasets
   keras
   matplotlib

[options.packages.find]
where=src